--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "ckeditor/ckeditor": "dev-full\/4.4.x" 
+        "ckeditor/ckeditor": "dev-full/4.4.x" 
     },
     "autoload": {
           "psr-4": {
