--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "yiisoft/yii2": "*",
-        "ckeditor/ckeditor": "dev-full/4.4.x" 
+        "ckeditor/ckeditor": "4.4.x" 
     },
     "autoload": {
           "psr-4": {
